# made22-c

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  main.c
.github/workflows/: cmake.yaml
hw1/: CMakeLists.txt  main.c
hw1/linters/: run.sh
hw1/matrix_dot_lib/: matrix_dot.c  matrix_dot.h
hw1/tests/: test_matrix_dot.cpp
hw2/: CMakeLists.txt  CPPLINT.cfg
hw2/linters/: run.sh
hw2/matrix_calc_lib/: CMakeLists.txt  matrix.cpp  matrix.h  matrix_calc+private.cpp  matrix_calc+private.h  matrix_calc.cpp  matrix_calc.h  matrix_dot.cpp  matrix_element_operations.cpp  matrix_invertible.cpp  matrix_operators.cpp  vector.cpp  vector.h
hw2/matrix_operations_lib/: CMakeLists.txt
hw2/tests/: CMakeLists.txt  test_matrix.cpp  test_matrix_calc.cpp  test_vector.cpp
hw3/: CMakeLists.txt  test_base.cpp
hw3/container_lib/: CMakeLists.txt  node.h  set.h  set.hpp  set_iterator.cpp  set_iterator.h  set_iterator.hpp
hw3/tests/: CMakeLists.txt  basic_avl.cpp  test_set.cpp  test_set_iterator.cpp
matrix_dot_lib/: CMakeLists.txt  matrix_dot.c  matrix_dot.h
tests/: CMakeLists.txt  test_matrix_dot.cpp
