cmake_minimum_required(VERSION 3.0.0)
project(matrix_operations_lib)

set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fprofile-arcs -ftest-coverage -fPIC -O0")

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} ${SOURCES})

set(MATRIX_OPERATIONS_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(MATRIX_OPERATIONS_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
